# Prism

./: .gitignore  README.md  environment.yml
.claude/: CLAUDE.md
Project Plan/: Key Features.MD  Project Description.md  Prompts.md  TECH_STACK.md
backend/: alembic.ini  create_dynamodb_tables.py  create_opensearch_index.py  pyproject.toml  requirements-dev.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 20260313_0550-7d2d09b82c53_initial_schema.py  20260313_0610-a1b2c3d4e5f6_add_feedback_to_grades.py  20260313_0700-b3c4d5e6f7a8_add_pgvector_forum_embeddings.py
backend/app/: main.py  sockets.py
backend/app/api/: dependencies.py
backend/app/core/: config.py
backend/app/db/: __init__.py  base.py  dynamo.py  seed.py  session.py
backend/app/models/: __init__.py  assignment.py  base.py  calendar.py  content.py  course.py  discussion.py  enums.py  forum_embedding.py  grade.py  message.py  notification.py  quiz.py  rubric.py  user.py
backend/app/routers/: announcements.py  assignments.py  calendar.py  chatbot.py  courses.py  discussions.py  files.py  forum.py  grades.py  grading.py  messages.py  modules.py  notifications.py  quizzes.py  rubrics.py  users.py
backend/app/schemas/: __init__.py  assignments.py  base.py  calendar.py  content.py  courses.py  discussions.py  dynamo.py  grades.py  grading.py  messages.py  notifications.py  quizzes.py  rubrics.py  users.py
backend/app/services/: bedrock.py  db.py  grading_pipeline.py  opensearch.py  pgvector_service.py  textract.py
frontend/: eslint.config.mjs  package-lock.json  (+3 more)
(+85 files in other folders)
